examples/openshift/envoy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
  labels:
    app: authorino
    svc: envoy
spec:
  selector:
    matchLabels:
      app: authorino
      svc: envoy
  template:
    metadata:
      labels:
        app: authorino
        svc: envoy
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy-dev:latest
        command: ["/usr/local/bin/envoy"]
        args:
          - --config-path /usr/local/etc/envoy/envoy.yaml
          - --service-cluster front-proxy
          - --log-level info
          - --component-log-level filter:trace,http:debug,router:debug
        ports:
        - name: web
          containerPort: 8000
        - name: admin
          containerPort: 8001
        volumeMounts:
          - name: config
            mountPath: /usr/local/etc/envoy
            readOnly: true
      volumes:
        - name: config
          configMap:
            name: envoy
            items:
            - key: envoy.yaml
              path: envoy.yaml
  replicas: 1
