examples/openshift/envoy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
  labels:
    app: authorino
spec:
  selector:
    app: authorino
    svc: envoy
  ports:
  - name: web
    port: 8000
    protocol: TCP
