examples/openshift/envoy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: envoy
  labels:
    app: authorino
spec:
  host: echo-api.authorino.apps.dev-eng-ocp4-5.dev.3sca.net
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: envoy
    weight: null
  port:
    targetPort: web
